# Rwanda-Province-District-Sector-Cell-Village---in-Rwanda

./: .env.example  .gitignore  Guidence.md  PACKAGES_RELEASE_GUIDE.md  README.md  SECURITY_REVIEW.md  TECHNICAL_DOCUMENTATION.md  package-lock.json  package.json
.github/workflows/: ci-security.yml  release-packages.yml
data/: rwanda-administrative.json
java-mvn/: pom.xml
java-mvn/src/main/java/io/github/derickmugisha/rwanda/: RwandaHierarchyService.java
java-mvn/src/main/java/io/github/derickmugisha/rwanda/model/: Cell.java  District.java  Province.java  RwandaDataset.java  Sector.java  Village.java
python/: README.md  pyproject.toml
python/rwanda_admin_hierarchy/: __init__.py  rwanda_administrative.json  service.py
python/rwanda_admin_hierarchy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build-json-from-pdf.js  build-json-from-pdf.py  validate-data.js
src/: data-store.js  index.js  server.js
